--- a/src/index.html
+++ b/src/index.html
@@ -1,8 +1,12 @@
 <!doctype html>
 <html lang="ja">
     <head>
-        <title>tohkani.com</title>
         <meta charset="UTF-8">
+        <title>tohkani.com</title>
+        <meta name="viewport" content="minimum-scale=1, initial-scale=1, width=device-width" />
+        <link rel="manifest" href="/manifest.json">
+        <link rel="icon" href="/favicon.svg" type="image/svg+xml">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
     </head>
     <body>
         <div id="app"></div>
